--- a/CatalogoProductos-Web/Css/Styles.css
+++ b/CatalogoProductos-Web/Css/Styles.css
@@ -572,6 +572,19 @@ hr {
     display: flex;
 }
 
+.radio-buttons-container {
+    display: flex;
+    justify-content: center;
+}
+
+.span-checkbox-container input[type=radio] {
+    border-radius: 50%;
+}
+
+.span-checkbox-container input:checked[type=radio] {
+    --bs-form-check-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
+}
+
 .imgs-form-container {
     display: flex;
     justify-content: center;
