--- a/CatalogoProductos-Web/Site.Master
+++ b/CatalogoProductos-Web/Site.Master
@@ -29,10 +29,26 @@
             </div>
 
             <div class="container-navbar-elements">
+                <%if (!CatalogoProductos_Web.ClasesHelper.LoginHelper.HaySesionIniciada(Session))
+                    {%>
                 <div class="container-navbar login-div">
                     <a href="Login.aspx" class="btn btn-outline-primary btn-sm login-proyect">LOGIN</a>
                     <a href="FormularioRegistro.aspx" class="btn btn-outline-success btn-sm register-proyect">REGISTRARSE</a>
                 </div>
+                <%}
+                 else
+                 {%>
+                <div class="container-navbar login-div">
+                    <div class="align-content-center">
+                        <a href="MiPerfil.aspx" class="btn btn-outline-primary btn-sm login-proyect align-content-center">MI PERFIL</a>
+                        <asp:Button ID="CerrarSesionButton" Text="CERRAR SESIÓN" CssClass="btn btn-outline-danger btn-sm login-proyect"
+                                    OnClick="CerrarSesionButton_Click" runat="server" />
+                    </div>
+                    <div class="img-perfil-container">
+                        <asp:Image ImageUrl="https://imebehavioralhealth.com/wp-content/uploads/2021/10/user-icon-placeholder-1.png" CssClass="img-fluid img-perfil" runat="server" />
+                    </div>
+                </div>
+                <%} %>
             </div>
 
             <hr />
