--- a/CatalogoProductos-Web/Site.Master
+++ b/CatalogoProductos-Web/Site.Master
@@ -22,13 +22,13 @@
         <nav class="navbar navbar-proyect shadow-sm">
 
 
-            <div class="container-navbar-elements">
+            <div class="width-max-width-1200">
                 <div class="container-navbar-logo">
                     <a href="#" class="navbar-brand mb-0 h1 navbar-brand-proyect">CATÁLOGO DIGITAL</a>
                 </div>
             </div>
 
-            <div class="container-navbar-elements">
+            <div class="width-max-width-1200">
                 <%if (!CatalogoProductos_Web.ClasesHelper.LoginHelper.HaySesionIniciada(Session))
                     {%>
                 <div class="container-navbar login-div">
@@ -61,7 +61,7 @@
 
             <hr />
 
-            <div class="container-navbar-elements">
+            <div class="d-flex width-max-width-1200">
 
                 <div class="container-navbar ul-div">
                     <ul class="ul-navbar">
@@ -106,11 +106,11 @@
                       {%>
                     <hr />
 
-                    <div class="container-filters-elements">
+                    <div class="width-max-width-1200 container-filters-elements">
 
                         <%-- Búsqueda por nombre, marca --%>
                         <div class="div-filter">
-                            <div class="div-search-container">
+                            <div class="validator-container">
                                 <asp:TextBox ID="BusquedaTextBox" CssClass="form-control form-control-sm" runat="server"></asp:TextBox>
                                 <label class="form-text ms-1">Búsqueda por coincidencias con categoría, marca, o nombre.</label>
                                 <asp:RequiredFieldValidator ErrorMessage="El campo debe contener un criterio de búsqueda." ValidationGroup="BusquedaVaciaValidation" CssClass="validator ms-1"
@@ -166,7 +166,7 @@
                     </div>
                     <%}%>
 
-                    <div class="container-filters-elements-active">
+                    <div class="width-max-width-1200">
 
                         <%if (FiltrosActivos)
                           {%>
@@ -191,14 +191,14 @@
                                 <i class="bi bi-currency-dollar"></i>
                                 Precio:
                             </label>
-                            <div class="field-validator-div">
+                            <div class="validator-container">
                                 <asp:DropDownList ID="CondicionDropDownList" CssClass="form-select form-select-sm me-3" runat="server" ></asp:DropDownList>
                                 <asp:CustomValidator ID="CondicionPrecioCustomValidator" ErrorMessage="La selección de la condición no es válida."
                                                      ControlToValidate="CondicionDropDownList" Display="Dynamic" CssClass="validator ms-1"
                                                      ValidationGroup="AplicarFiltrosValidation" OnServerValidate="CondicionPrecioCustomValidator_ServerValidate"
                                                      runat="server" />
                             </div>
-                            <div class="field-validator-div">
+                            <div class="validator-container">
                                 <asp:TextBox ID="ValorFiltroTextBox" CssClass="form-control form-control-sm ms-1" runat="server" ></asp:TextBox>
                                 <asp:CustomValidator ErrorMessage="El valor ingresado deber ser un número." ID="ValorFiltroCustomValidator"
                                                      ControlToValidate="ValorFiltroTextBox" Display="Dynamic"
@@ -225,7 +225,7 @@
 
             <hr />
 
-            <div class="container-footer-elements">
+            <div class="width-max-width-1200 container-footer-elements">
                 <p>2024 - CATÁLOGO DIGITAL</p>
                 <ul class="ul-navbar">
                     <li class="nav-item nav-item-proyect">
