--- a/CatalogoProductos-Web/Site.Master
+++ b/CatalogoProductos-Web/Site.Master
@@ -11,6 +11,7 @@
     <link href="~/Css/Styles.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <script src="Js/Script.js"></script>
 
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -61,9 +62,9 @@
 
             <hr />
 
-            <div class="d-flex width-max-width-1200">
+            <div class="d-flex width-max-width-1200 navbar-div">
 
-                <div class="container-navbar justify-content-center">
+                <div id="ul-nav" class="container-navbar justify-content-center">
                     <ul class="ul-navbar">
                         <li class="nav-item nav-item-proyect">
                             <a href="Default.aspx" class="nav-link active icon-link icon-link-hover">
@@ -96,6 +97,10 @@
                         </li>
                         <%} %>
                     </ul>
+                </div>
+
+                <div class="nav-responsive" onclick="MostrarOcultar()">
+                    <i class="bi bi-list"></i>
                 </div>
 
             </div>
