--- a/CatalogoProductos-Web/Css/Styles.css
+++ b/CatalogoProductos-Web/Css/Styles.css
@@ -37,7 +37,6 @@ hr {
 
 .min-height-container {
     margin: 1.5rem 0;
-    /*width: 1100px;*/
     min-height: 700px;
 }
 
@@ -45,6 +44,129 @@ hr {
     display: flex;
     flex-direction: column;
 }
+
+.jumbotron-list-grid {
+    min-height: 700px;
+}
+
+.jumbotron-no-list-grid {
+    background-color: var(--bs-danger-bg-subtle) !important;
+}
+
+.btn-add-operation {
+    position: absolute;
+    top: -5px;
+    right: 0;
+}
+
+.btn-back-adm {
+    position: absolute;
+    top: -5px;
+}
+
+.has-icon a {
+    font-family: bootstrap-icons !important;
+    border: 1px solid #ffc107;
+    border-radius: .375rem;
+    text-decoration: none;
+    padding: 5px;
+    color: #fff;
+    background-color: #ffc107;
+    font-size: 1.2rem;
+    transition: .2s;
+}
+
+.has-icon a:hover {
+    background-color: #ffe30c;
+    border-color: #ffe30c;
+}
+
+.pagination-proyect tr {
+    --bs-pagination-padding-x: 0.75rem;
+    --bs-pagination-padding-y: 0.375rem;
+    --bs-pagination-font-size: 1rem;
+    --bs-pagination-color: var(--bs-link-color);
+    --bs-pagination-bg: var(--bs-body-bg);
+    --bs-pagination-border-width: var(--bs-border-width);
+    --bs-pagination-border-color: var(--bs-border-color);
+    --bs-pagination-border-radius: var(--bs-border-radius);
+    --bs-pagination-hover-color: var(--bs-link-hover-color);
+    --bs-pagination-hover-bg: var(--bs-tertiary-bg);
+    --bs-pagination-hover-border-color: var(--bs-border-color);
+    --bs-pagination-focus-color: var(--bs-link-hover-color);
+    --bs-pagination-focus-bg: var(--bs-secondary-bg);
+    --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+    --bs-pagination-active-color: #fff;
+    --bs-pagination-active-bg: #0d6efd;
+    --bs-pagination-active-border-color: #0d6efd;
+    --bs-pagination-disabled-color: var(--bs-secondary-color);
+    --bs-pagination-disabled-bg: var(--bs-secondary-bg);
+    --bs-pagination-disabled-border-color: var(--bs-border-color);
+    display: flex;
+    padding-left: 0;
+    list-style: none;
+}
+
+.pagination-proyect tr td {
+    position: relative;
+    display: block;
+    font-size: var(--bs-pagination-font-size);
+    color: var(--bs-pagination-color);
+    text-decoration: none;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
+.pagination-proyect tr td a, span {
+    position: relative;
+    display: block;
+    padding: var(--bs-pagination-padding-y) var(--bs-pagination-padding-x);
+    font-size: var(--bs-pagination-font-size);
+    color: var(--bs-pagination-color);
+    text-decoration: none;
+    background-color: var(--bs-pagination-bg);
+    border: var(--bs-pagination-border-width) solid var(--bs-pagination-border-color);
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
+.pagination-proyect tr td span {
+    z-index: 3;
+    color: var(--bs-pagination-active-color);
+    background-color: var(--bs-pagination-active-bg);
+    border-color: var(--bs-pagination-active-border-color);
+}
+
+.pagination-proyect tr td span, a {
+    border-top-left-radius: var(--bs-pagination-border-radius);
+    border-bottom-left-radius: var(--bs-pagination-border-radius);
+    border-top-right-radius: var(--bs-pagination-border-radius);
+    border-bottom-right-radius: var(--bs-pagination-border-radius);
+}
+
+#UpdatePanelPreGridView div {
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+}
+
+.operation-success {
+    width: 100%;
+    border: 1px solid var(--bs-green);
+    padding: 10px;
+    font-size: 1.2rem;
+    background-color: var(--bs-green);
+    border-radius: .375rem;
+    color: white;
+}
+
+.operation-failed {
+    width: 100%;
+    border: 1px solid var(--bs-danger);
+    padding: 10px;
+    font-size: 1.2rem;
+    background-color: var(--bs-danger);
+    border-radius: .375rem;
+    color: white;
+}
+
 /* --------------------------------------------------------------------------------------------------------------------------------------------------------- */
 /* ------------------------------------------------------------------- NAVBAR ------------------------------------------------------------------------------ */
 .navbar-proyect {
@@ -494,116 +616,6 @@ hr {
 
 /* --------------------------------------------------------------------------------------------------------------------------------------------------------- */
 /* ------------------------------------------------------------------- LISTADO DE PRODUCTOS ---------------------------------------------------------------- */
-.has-icon a {
-    font-family: bootstrap-icons !important;
-    border: 1px solid #ffc107;
-    border-radius: .375rem;
-    text-decoration: none;
-    padding: 5px;
-    color: #fff;
-    background-color: #ffc107;
-    font-size: 1.2rem;
-    transition: .2s;
-}
-
-.has-icon a:hover {
-    background-color: #ffe30c;
-    border-color: #ffe30c;
-}
-
-.pagination-proyect tr {
-    --bs-pagination-padding-x: 0.75rem;
-    --bs-pagination-padding-y: 0.375rem;
-    --bs-pagination-font-size: 1rem;
-    --bs-pagination-color: var(--bs-link-color);
-    --bs-pagination-bg: var(--bs-body-bg);
-    --bs-pagination-border-width: var(--bs-border-width);
-    --bs-pagination-border-color: var(--bs-border-color);
-    --bs-pagination-border-radius: var(--bs-border-radius);
-    --bs-pagination-hover-color: var(--bs-link-hover-color);
-    --bs-pagination-hover-bg: var(--bs-tertiary-bg);
-    --bs-pagination-hover-border-color: var(--bs-border-color);
-    --bs-pagination-focus-color: var(--bs-link-hover-color);
-    --bs-pagination-focus-bg: var(--bs-secondary-bg);
-    --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
-    --bs-pagination-active-color: #fff;
-    --bs-pagination-active-bg: #0d6efd;
-    --bs-pagination-active-border-color: #0d6efd;
-    --bs-pagination-disabled-color: var(--bs-secondary-color);
-    --bs-pagination-disabled-bg: var(--bs-secondary-bg);
-    --bs-pagination-disabled-border-color: var(--bs-border-color);
-    display: flex;
-    padding-left: 0;
-    list-style: none;
-}
-
-.pagination-proyect tr td {
-    position: relative;
-    display: block;
-    font-size: var(--bs-pagination-font-size);
-    color: var(--bs-pagination-color);
-    text-decoration: none;
-    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-}
-
-.pagination-proyect tr td a, span {
-    position: relative;
-    display: block;
-    padding: var(--bs-pagination-padding-y) var(--bs-pagination-padding-x);
-    font-size: var(--bs-pagination-font-size);
-    color: var(--bs-pagination-color);
-    text-decoration: none;
-    background-color: var(--bs-pagination-bg);
-    border: var(--bs-pagination-border-width) solid var(--bs-pagination-border-color);
-    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-}
-
-.pagination-proyect tr td span {
-    z-index: 3;
-    color: var(--bs-pagination-active-color);
-    background-color: var(--bs-pagination-active-bg);
-    border-color: var(--bs-pagination-active-border-color);
-}
-
-.pagination-proyect tr td span, a {
-    border-top-left-radius: var(--bs-pagination-border-radius);
-    border-bottom-left-radius: var(--bs-pagination-border-radius);
-    border-top-right-radius: var(--bs-pagination-border-radius);
-    border-bottom-right-radius: var(--bs-pagination-border-radius);
-}
-
-.jumbotron-products-grid {
-    min-height: 477px;
-}
-
-.jumbotron-no-products-grid {
-    background-color: var(--bs-danger-bg-subtle) !important;
-}
-
-#UpdatePanelPreGridView div {
-    overflow-x: auto;
-    -webkit-overflow-scrolling: touch;
-}
-
-.operation-success {
-    width: 100%;
-    border: 1px solid var(--bs-green);
-    padding: 10px;
-    font-size: 1.2rem;
-    background-color: var(--bs-green);
-    border-radius: .375rem;
-    color: white;
-}
-
-.operation-failed {
-    width: 100%;
-    border: 1px solid var(--bs-danger);
-    padding: 10px;
-    font-size: 1.2rem;
-    background-color: var(--bs-danger);
-    border-radius: .375rem;
-    color: white;
-}
 
 /* --------------------------------------------------------------------------------------------------------------------------------------------------------- */
 /* ----------------------------------------------------------- MIS FAVORITOS ------------------------------------------------------------------------------- */
@@ -758,6 +770,14 @@ hr {
 }
 
 /* --------------------------------------------------------------------------------------------------------------------------------------------------------- */
+/* ------------------------------------------------------------------- ADMINISTRACIÓN ---------------------------------------------------------------------- */
+
+.width-adj {
+    width: 50%;
+}
+
+
+/* --------------------------------------------------------------------------------------------------------------------------------------------------------- */
 /* ------------------------------------------------------------------- FOOTER ------------------------------------------------------------------------------ */
 .footer-proyect {
     justify-content: center !important;
@@ -789,6 +809,17 @@ hr {
     .jumbotron-products-icon {
         font-size: 70px;
     }
+
+    .title-addoperation-container {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .btn-add-operation, .btn-back-adm {
+        position: relative;
+        margin-top: 15px;
+    }
 }
 
 @media (max-width: 750px) {
@@ -800,6 +831,10 @@ hr {
     #operaciones-div a {
         padding: 10px 0;
         margin-bottom: 10px;
+    }
+
+    .width-adj {
+        width: 90%;
     }
 }
 
