--- a/CatalogoProductos-Web/Site.Master
+++ b/CatalogoProductos-Web/Site.Master
@@ -6,7 +6,8 @@
 <head runat="server">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title></title>
+    <title>Catálogo digital</title>
+    <link href="Icono/favicon_2.png" rel="icon" type="image/x-icon" />
 
     <link href="~/Css/Styles.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -89,24 +90,6 @@
                         <%} %>
                         <%if (CatalogoProductos_Web.ClasesHelper.LoginHelper.SesionIniciadaEsAdmin(Session))
                           {%>
-                        <%--<li class="nav-item nav-item-proyect">
-                            <a href="ListadoProductos.aspx" class="nav-link active icon-link icon-link-hover">
-                                <i class="bi bi-list-ol"></i>
-                                LISTADO DE PRODUCTOS
-                            </a>
-                        </li>
-                        <li class="nav-item nav-item-proyect">
-                            <a href="ListadoProductos.aspx" class="nav-link active icon-link icon-link-hover">
-                                <i class="bi bi-list-ol"></i>
-                                LISTADO DE MARCAS
-                            </a>
-                        </li>
-                        <li class="nav-item nav-item-proyect">
-                            <a href="ListadoProductos.aspx" class="nav-link active icon-link icon-link-hover">
-                                <i class="bi bi-list-ol"></i>
-                                LISTADO DE CATEGORÍAS
-                            </a>
-                        </li>--%>
                         <li class="nav-item nav-item-proyect">
                             <a href="Administracion.aspx" class="nav-link active icon-link icon-link-hover">
                                 <i class="bi bi-gear"></i>
